--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 p {
   text-align: center;
   color: aqua;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+  font-style: unset;
 }
