--- a/style.css
+++ b/style.css
@@ -5,3 +5,10 @@ p {
   font-weight: lighter;
   font-style: unset;
 }
+h1 {
+  text-align: center;
+  color: brown;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+  font-style: unset;
+}
