--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 p {
   text-align: center;
-  color: cornflowerblue;
+  color: aqua;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
   font-style: unset;
