--- a/style.css
+++ b/style.css
@@ -12,3 +12,57 @@ h1 {
   font-weight: lighter;
   font-style: unset;
 }
+.estilosTextos {
+  text-align: center;
+  color: rgb(139, 67, 0);
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+  font-style: unset;
+  font-size: 2.2em;
+}
+.estiloMenu {
+  text-align: center;
+  color: rgb(139, 67, 0);
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+  font-style: unset;
+  font-size: 1.5em;
+}
+a {
+  text-decoration: none;
+  color: rgb(139, 67, 0);
+}
+a:hover {
+  text-decoration: underline;
+  color: rgb(139, 67, 0);
+}
+body {
+  background-color: rgb(255, 250, 240);
+  margin: 0;
+  padding: 0;
+}
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+li {
+  display: inline;
+  margin-right: 20px;
+}
+li a {
+  text-decoration: none;
+  color: rgb(139, 67, 0);
+}
+li a:hover {
+  text-decoration: underline;
+  color: rgb(139, 67, 0);
+}
+header {
+  background-color: rgb(255, 228, 196);
+  padding: 20px;
+}
+footer {
+  background-color: rgb(255, 228, 196);
+  padding: 10px;
+  text-align: center;
+}
